tests/snapshots/integration__assert_changelog-11.snap
---
source: tests/integration.rs
expression: changelog
---
# Version 0.1.1
fix: 1
# Version 0.1.0
Initial Commit
