tests/snapshots/integration__assert_changelog-17.snap
---
source: tests/integration.rs
expression: changelog
---
# Version 0.2.0
feat!: 1
# Version 0.1.0
Initial Commit
