tests/snapshots/integration__assert_changelog-4.snap
---
source: tests/integration.rs
expression: changelog
---
# Version 0.2.0
fix: bug in B
feat: add feature B
fix!: bug in A
feat: add feature A
# Version 0.1.0
Initial Commit
