tests/snapshots/integration__assert_changelog-5.snap
---
source: tests/integration.rs
expression: changelog
---
# Version 0.2.0
feat!: breaking change
fix: correct logic in parser
# Version 0.1.0
Initial Commit
