tests/snapshots/integration__assert_changelog-6.snap
---
source: tests/integration.rs
expression: changelog
---
# Version 1.0.1
fix: 1
# Version 1.0.0
Initial Commit
