tests/snapshots/integration__assert_changelog-7.snap
---
source: tests/integration.rs
expression: changelog
---
# Version 1.1.0
feat: 1
# Version 1.0.0
Initial Commit
